[tool.poetry]
name = "pypi-stat"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
packages = [{include = "pypi_stat"}]

[tool.poetry.dependencies]
python = "^3.11"
pypistats = {extras = ["pandas"], version = "^1.3.0"}
ipykernel = "^6.22.0"
plotly = "^5.14.1"
nbformat = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
